--- a/Praktek_Machine_Learning/dataLoading1.ipynb
+++ b/Praktek_Machine_Learning/dataLoading1.ipynb
@@ -3673,6 +3673,66 @@
     "plt.ylabel('Correlation Coefficient')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e235b31",
+   "metadata": {},
+   "source": [
+    "Keterangan :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e116dfb2",
+   "metadata": {},
+   "source": [
+    "1. OverallQual: sebagian besar data terkonsentrasi di sekitar nilai tengah dengan distribusi miring ke kanan.\n",
+    "2. YearBuilt: distribusi cenderung normal dengan beberapa lonjakan pada tahun tertentu, menunjukkan periode pembangunan rumah yang lebih aktif.\n",
+    "3. LotArea: distribusinya tidak simetris karena adanya beberapa outlier yang signifikan pada sisi kanan (lot area yang sangat besar).\n",
+    "4. SaleType: kategori tertentu mendominasi distribusi, menunjukkan preferensi atau pola tertentu dalam tipe penjualan.\n",
+    "5. SaleCondition: mirip dengan SaleType, beberapa kondisi penjualan lebih umum dibandingkan lainnya."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07ddf256",
+   "metadata": {},
+   "source": [
+    "Beberapa poin penting yang bisa diambil dari analisis korelasi di atas antara lain sebagai berikut.\n",
+    "\n",
+    "1. Ada korelasi positif yang kuat antara variabel tertentu, seperti antara OverallQual dan SalePrice (kolom ini ada tetapi tidak tertulis karena banyaknya fitur) yang menunjukkan bahwa kualitas rumah mungkin berhubungan erat dengan harga jualnya.\n",
+    "2. Korelasi negatif atau rendah juga terlihat pada beberapa pasangan variabel, menunjukkan hubungan yang lemah atau tidak ada antara variabel tersebut.\n",
+    "\n",
+    "Silakan buat kesimpulan berdasarkan data matriks korelasi di atas dengan catatan sebagai berikut.\n",
+    "\n",
+    "1. Korelasi Positif: nilai korelasi positif menunjukkan bahwa saat satu variabel meningkat, variabel lain juga cenderung meningkat. Nilai korelasi +1 menunjukkan korelasi positif sempurna.\n",
+    "2. Korelasi Negatif: nilai korelasi negatif menunjukkan bahwa saat satu variabel meningkat, variabel lain cenderung menurun. Nilai korelasi -1 menunjukkan korelasi negatif sempurna.\n",
+    "3. Korelasi Nol: nilai korelasi 0 menunjukkan bahwa tidak ada hubungan linier antara dua variabel."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90df0273",
+   "metadata": {},
+   "source": [
+    "Jika Anda sudah bisa menyimpulkan hasil dari eksplorasi tersebut, mari kita samakan dengan beberapa kesimpulan berikut.\n",
+    "\n",
+    "1. Hubungan antara Luas Ruang Tinggal dan Harga Jual\n",
+    "Analisis di atas menunjukkan hubungan positif yang kuat antara luas ruang tinggal (GrLivArea) dan harga jual (SalePrice). Properti dengan luas ruang tinggal yang lebih besar cenderung memiliki harga jual yang lebih tinggi.\n",
+    "\n",
+    "2. Dampak Luas Garasi\n",
+    "Korelasi yang moderat antara luas garasi (GarageArea) dan harga jual menunjukkan bahwa properti dengan garasi yang lebih luas memungkinkan untuk dijual dengan harga lebih tinggi.\n",
+    "\n",
+    "3. Outliers dan Distribusi\n",
+    "Outliers yang ditemukan dalam variabel seperti SalePrice dan GrLivArea dapat memberikan wawasan tentang properti-properti yang luar biasa dalam hal harga dan ukuran. Namun, mereka juga bisa menyesatkan analisis jika tidak ditangani dengan benar. Transformasi logaritmik membantu untuk mengatasi hal ini.\n",
+    "\n",
+    "4. Pengaruh Signifikan dari Ukuran Properti\n",
+    "Pengembang properti atau investor harus mempertimbangkan ukuran ruang tinggal dan garasi sebagai faktor utama yang memengaruhi nilai jual.\n",
+    "\n",
+    "5. Pengelolaan Outliers\n",
+    "Outliers yang ditemukan harus dianalisis lebih lanjut untuk memahami apakah mereka mencerminkan kondisi pasar yang unik atau kesalahan dalam data."
+   ]
   }
  ],
  "metadata": {
